--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "skills",
   "version": "0.1.0",
   "private": true,
-  
+  "homepage": "https://khachikkar.github.io/homee",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -22,6 +22,8 @@
     "gh-pages": "^3.2.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
